# deo-backend

./: .gitignore  README.md  download_db_for_render.py  pyproject.toml  release_db.sh  render.yaml
deo_backend/: dash_helpers.py  demographic_constants.py  env.py  fastapi_models.py  hin_random_sample_1000.csv  main.py  main_fastapi.py  models.py  police_districts.geojson  routers.py  seed.py  update_db.ipynb
deo_backend/data/: car_ped_stops_hin_random_sample.csv
deo_backend/data/demographics/: README.md  police_service_area.csv
deo_backend/demographics/: constants.py  police_geographies.csv
deo_backend/maps/: hin_2020.geojson  hin_2025.geojson  police_districts.geojson  police_psas.geojson  police_psas_old.geojson
deo_backend/notebook/: district_update.ipynb  shootings_check.ipynb  update_db.ipynb
deo_backend/pages/: home.py  page5.py  page_neighborhoods.py  page_reasons.py  page_safety.py  page_snapshot.py  page_stops.py
deo_backend/pages/_template/: __init__.py
deo_backend/pages/neighborhoods/: __init__.py  by_demographic_category.py  by_neighborhood.py  compare_districts.py  num_intrusions.py  searches_vs_frisks.py
deo_backend/pages/reasons/: __init__.py  comparison_bar_drivers.py  comparison_bar_neighborhoods.py  comparison_bars.py  deo_impacts.py  operational.py  page_template.py
deo_backend/pages/safety/: __init__.py  hin_map.py  num_accidents.py  shootings_vs_stops_maps.py
deo_backend/pages/snapshot/: __init__.py  annual_summary.py
deo_backend/pages/stops/: __init__.py  group_comparison.py  (+5 more)
deo_backend/update_db/: models.py  update_db.py
